feat: add swagger to user_handlers
